The Bootstrap Disaster of 2017

--- a/index.html
+++ b/index.html
@@ -23,32 +23,45 @@
 	<div class = "container">
 		<div class = "row">
 		<h1 class = "navbar-default">Bridget Bourne</h1>
-			<div class = "navbar-nav"><a class = "navbar-right" href = "index.html">About</a><a class = "navbar-right" href = "portfolio.html">Portfolio</a><a class = "navbar-right" href = "contact.html">Contact</a>
-			</div>
-			
+		<a class = "navbar-right" href = "index.html">About</a><a class = "navbar-right" href = "portfolio.html">Portfolio</a><a class = "navbar-right" href = "contact.html">Contact</a>	
 		</div>
 		<div class = "row">
-			<div class =  "col-md-2"><img src = "../Basic-Portfolio/assets/images/profile-picture.jpg" alt = "Myself in a cute green shirt!" height = "170px" width = "100px">
-			<div class = "col-md-6"><h1>About Me</h1>
+			<div class =  "col-md-6">
+				<div class = "navbar-inverse navbar-text">
+				<img class = "navbar-text" src = "../Basic-Portfolio/assets/images/profile-picture.jpg" alt = "Myself in a cute green shirt!" height = "170px" width = "100px">
+				<h1>About Me</h1>
 <!--Here's where you talk about yourself-->
-			<p>Greetings, everyone! My name is Bridget Bourne. I am 25 years old, and am a graduate from the University of Dallas with a B.A. in Classics. As a result, I am highly skilled in the studies of literature and languages, especially Latin and to a lesser extent, Ancient Greek. However, before I decided to major in Classics, I had been majoring in mathematics for 2 years, and am thus extremely apt in the field of applied mathematics. I now am aspiring to teach Latin, mathematics, and/or music, preferrably to high school students.</p>
-			<p>In addition to my search for a job in the education field, I recently have also started to learn how to code computers at the University of Central Florida's coding bootcamp. Before I was residing in Florida, I had been living in Denver, Colorado for about 8 years, and moved down here only a month ago. Although the coding work is considerably difficult, my skills with the subject are becoming better and better each day.</p>
+				<p>Greetings, everyone! My name is Bridget Bourne. I am 25 years old, and am a graduate from the University of Dallas with a B.A. in Classics. As a result, I am highly skilled in the studies of literature and languages, especially Latin and to a lesser extent, Ancient Greek. However, before I decided to major in Classics, I had been majoring in mathematics for 2 years, and am thus extremely apt in the field of applied mathematics. I now am aspiring to teach Latin, mathematics, and/or music, preferrably to high school students.</p>
+				<p>In addition to my search for a job in the education field, I recently have also started to learn how to code computers at the University of Central Florida's coding bootcamp. Before I was residing in Florida, I had been living in Denver, Colorado for about 8 years, and moved down here only a month ago. Although the coding work is considerably difficult, my skills with the subject are becoming better and better each day.</p>
+				</div>
 			</div>
 			
 		
 	<!--This shows your social media pages You probably also want the social network images to be links-->
 	
-			<div class = "col-md-4"><h2>Follow me!</h2>
-			<ul><li><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "../Basic-Portfolio/assets/images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px", width = "80px">LinkedIn page</a></li>
-			<li><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "../Basic-Portfolio/assets/images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px", width = "80px">Stack Overflow page</a></li>
-			<li><a href = "https://github.com/BooBooChan"><img src = "../Basic-Portfolio/assets/images/Github-contact.png" alt = "GitHub icon" height = "80px", width = "80px">GitHub page</a></li></ul>
+			<div class = "col-md-6">
+				<div class = "navbar-right">
+					<!--<div class = "navbar-inverse navbar-toggle icon-bar">-->
+
+					<!--Grr... all navbar classes that decorate seem to make my network menu disappear. Why?-->
+
+					<h2>Follow me!</h2>
+					<ul><li class = "navbar"><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "../Basic-Portfolio/assets/images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px", width = "80px">LinkedIn page</a></li>
+					<li class = "navbar"><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "../Basic-Portfolio/assets/images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px", width = "80px">Stack Overflow page</a></li>
+					<li class = "navbar"><a href = "https://github.com/BooBooChan"><img src = "../Basic-Portfolio/assets/images/Github-contact.png" alt = "GitHub icon" height = "80px", width = "80px">GitHub page</a></li></ul>
+					<!--</div>-->
+
 			</div>
 		</div>
 
 		
 		
 <!--This is your copyright notice on bottom of page. Do you need a copyright notice?-->
-		<div class = "row"><p class = "navbar-fixed-bottom">Umm, footer. What do I put in here?</p>
+		<div class = "row"><p class = "navbar-fixed-bottom">
+			<div class = "navbar-default navbar-text">Umm, footer. What do I put in here?</div></p>
+			
+			<!--It's the same boring, barely visible colors for each navbar CSS property. There's gotta be a catch, but what is it?-->
 		</div>
+	</div>
 	</body>
 </html>
