--- a/portfolio.html
+++ b/portfolio.html
@@ -16,23 +16,45 @@
 	</head>
 	<body>
 	<!--Links to your web pages-->
-		<div> <a href = "index.html">About</a><a href = "portfolio.html">Portfolio</a><a href = "contact.html">Contact</a>
-		<h1>Bridget Bourne</h1></div>
-		<!--Social network box-->	
-		<div><h2>Follow me!</h2>
-		<ul><li><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "assets/images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px" width = "80px">LinkedIn</a></li><li><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "assets/images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px" width = "80px">Stack Overflow page</a></li>
-		<li><a href = "https://github.com/BooBooChan"><img src = "assets/images/Github-contact.png" alt = "GitHub icon" height = "80px" width = "80px">GitHub page</a></li></ul></div>
+	<div class = "container">
+		<div class = "row">
+		<h1 class = "navbar-default">Bridget Bourne</h1>
+		<a class = "navbar-right" href = "index.html">About</a><a class = "navbar-right" href = "portfolio.html">Portfolio</a><a class = "navbar-right" href = "contact.html">Contact</a>
+		</div>
 		<div><h1 class = "page">Portfolio</h1>
-<!--These are the links to your portfolio entries-->
-		<a>Nightwish</a><img class = "portfolio" src = "assets/images/portfolio-picture-1.png" alt = "A screenshot of a screen featuring a screenshot. How meta!">
-		<a>Apocalyptica</a><img class = "portfolio" src = "assets/images/portfolio-picture-2.png" alt = "A surfer surfing">
-		<a>OneRepublic</a><img class = "portfolio" src = "assets/images/portfolio-picture-3.png" alt = "Baseball at sunset">
-		<a>E Nomine</a><img class = "portfolio" src = "assets/images/portfolio-picture-4.png" alt = "Soccer at sunset">
-		<a>Queen</a><img class = "portfolio" src = "assets/images/Follow-your-dreams.png" alt = "Ballet practice all are welcome">
-		<a>Rush</a><img class = "portfolio" src = "assets/images/portfolio-picture-6.jpg" alt = "My brother suited up for a Japanese baseball game"></div>
 
-<!--Copyright info-->
-		<p>Umm, footer. What do I put in here?</p>
+			</div>
 		
+<!--These are the links to your portfolio entries-->
+		<div class = "row">
+			<div class = "col-md-4"><a>Nightwish</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/portfolio-picture-1.png" alt = "A screenshot of a screen featuring a screenshot. How meta!" height = "150px" width = "150px">
+			</div>
+			<div class = "col-md-4"><a>Apocalyptica</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/portfolio-picture-2.png" alt = "A surfer surfing" height = "150px" width = "150px">
+			</div>
+		</div>
+		<div class = "row">
+			<div class = "col-md-4"><a>OneRepublic</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/portfolio-picture-3.png" alt = "Baseball at sunset" height = "150px" width = "150px">
+			</div>
+			<div class = "col-md-4"><a>E Nomine</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/portfolio-picture-4.png" alt = "Soccer at sunset" height = "150px" width = "150px">
+<!--Social network box-->
+			<div class = "col-md-4">	
+			<h2>Follow me!</h2>
+			<ul><li><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "../Basic-Portfolio/assets/images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px" width = "80px">LinkedIn</a></li><li><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "../Basic-Portfolio/assets/images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px" width = "80px">Stack Overflow page</a></li>
+			<li><a href = "https://github.com/BooBooChan"><img src = "../Basic-Portfolio/assets/images/Github-contact.png" alt = "GitHub icon" height = "80px" width = "80px">GitHub page</a></li></ul>
+			</div>
+		</div>
+		
+		<div class = "row">
+			<div class = "col-md-6"><a>Queen</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/Follow-your-dreams.png" alt = "Ballet practice all are welcome" height = "150px" width = "150px">
+			</div>
+			<div class = "col-md-6"><a>Rush</a><img class = "portfolio" src = "../Basic-Portfolio/assets/images/portfolio-picture-6.jpg" alt" alt = "My brother suited up for a Japanese baseball game" height = "150 px" width = "150px">
+			</div>
+		</div>
+		
+<!--Copyright info-->
+		<div class = "row"><p class = "navbar-fixed-bottom">
+			<div class = "navbar-default navbar-text">Umm, footer. What do I put in here?</div></p>
+		</div>
+	</div>	
 	</body>
 </html>
