--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class = "row">
 			<div class =  "col-md-6">
 				<div class = "navbar-inverse navbar-text">
-				<img class = "navbar-text" src = "../Basic-Portfolio/assets/images/profile-picture.jpg" alt = "Myself in a cute green shirt!" height = "170px" width = "100px">
+				<img class = "navbar-text" src = "images/profile-picture.jpg" alt = "Myself in a cute green shirt!" height = "170px" width = "100px">
 				<h1>About Me</h1>
 <!--Here's where you talk about yourself-->
 				<p>Greetings, everyone! My name is Bridget Bourne. I am 25 years old, and am a graduate from the University of Dallas with a B.A. in Classics. As a result, I am highly skilled in the studies of literature and languages, especially Latin and to a lesser extent, Ancient Greek. However, before I decided to major in Classics, I had been majoring in mathematics for 2 years, and am thus extremely apt in the field of applied mathematics. I now am aspiring to teach Latin, mathematics, and/or music, preferrably to high school students.</p>
@@ -46,9 +46,9 @@
 					<!--Grr... all navbar classes that decorate seem to make my network menu disappear. Why?-->
 
 					<h2>Follow me!</h2>
-					<ul><li class = "navbar"><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "../Basic-Portfolio/assets/images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px", width = "80px">LinkedIn page</a></li>
-					<li class = "navbar"><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "../Basic-Portfolio/assets/images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px", width = "80px">Stack Overflow page</a></li>
-					<li class = "navbar"><a href = "https://github.com/BooBooChan"><img src = "../Basic-Portfolio/assets/images/Github-contact.png" alt = "GitHub icon" height = "80px", width = "80px">GitHub page</a></li></ul>
+					<ul><li class = "navbar"><a href = "https://www.linkedin.com/in/bridget-bourne-693a94106/"><img src = "images/Linkedin-contact.png" alt = "LinkedIn icon" height = "80px", width = "80px">LinkedIn page</a></li>
+					<li class = "navbar"><a href = "http://stackoverflow.com/users/7973455/bridget-bourne"><img src = "images/Stackoverflow-contact.png" alt = "Stack Overflow icon" height = "80px", width = "80px">Stack Overflow page</a></li>
+					<li class = "navbar"><a href = "https://github.com/BooBooChan"><img src = "images/Github-contact.png" alt = "GitHub icon" height = "80px", width = "80px">GitHub page</a></li></ul>
 					<!--</div>-->
 
 			</div>
